# config-lib-msgspec

./: .coverage  .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: build-package.yml  python-package.yml
docs/: 01-project-overview.md  02-recursive-merge-configdicts.md  03-argument-parsing.md  03-env2dict.md
src/config_lib/: base.py
src/config_lib/sources/: cli.py  env.py  yaml.py
src/config_lib/utils/: merge.py  nest.py  types.py
tests/: test_base.py
tests/sources/: test_sources_cli.py  test_sources_env.py  test_sources_yaml.py
tests/utils/: test_utils_merge.py  test_utils_nest.py
