[project]
name = "config-lib"
version = "0.0.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Artem Shestopalov", email = "tema.rastaclaus2016@ya.ru" }
]
requires-python = ">=3.9"
dependencies = [
    "msgspec>=0.19.0",
    "pyyaml>=6.0.2",
    "typing-extensions>=4.13.0 ; python_full_version < '3.11'",
]

[project.scripts]
config-lib = "config_lib:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
ignore = ["ANN401"]

[tool.basedpyright]
reportAny = false
reportExplicitAny = false

[dependency-groups]
test = [
    "coverage>=7.8.0",
    "pytest>=8.3.5",
]

[tool.coverage.run]
omit = ["tests/*"]
