[project]
name = "config-lib-msgspec"
version = "0.0.7"
description = "A lightweight configuration management library for Python applications with multiple sources, type validation, and automatic merging"
readme = "README.md"
authors = [
    { name = "Artem Shestopalov", email = "tema.rastaclaus@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "msgspec>=0.19.0",
    "pyyaml>=6.0.2",
    "typing-extensions>=4.13.0 ; python_full_version < '3.11'",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
keywords = [
    "configuration",
    "config",
    "settings",
    "yaml",
    "environment",
    "cli"
]

[project.urls]
Homepage = "https://github.com/rastaclaus/config-lib-msgspec.git"
Repository = "https://github.com/rastaclaus/config-lib-msgspec.git"
Issues = "https://github.com/rastaclaus/config-lib-msgspec/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "coverage>=7.8.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0"
]

[project.scripts]
config-lib = "config_lib:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
ignore = ["ANN401"]

[tool.basedpyright]
reportAny = false
reportExplicitAny = false

[dependency-groups]
test = [
    "coverage>=7.8.0",
    "pytest>=8.3.5",
]

[tool.coverage.run]
omit = ["tests/*"]

